--- a/web/src/app/subdivision-data-display/subdivision-data-display.component.html
+++ b/web/src/app/subdivision-data-display/subdivision-data-display.component.html
@@ -1,1 +1,12 @@
-<p>Display the subdivision data here!</p>
+<div *ngIf="loading" class="centerDiv">Loading...</div>
+
+<div *ngIf="!loading">
+  <table>
+    <tr>
+      <th>Some data</th>
+    </tr>
+    <tr *ngFor="let sub of subdivisions">
+      <td>Test</td>
+    </tr>
+  </table>
+</div>
