--- a/web/src/app/subdivision-data-display/subdivision-data-display.component.css
+++ b/web/src/app/subdivision-data-display/subdivision-data-display.component.css
@@ -4,3 +4,20 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+table {
+  border: 1px solid grey;
+  border-collapse: collapse;
+}
+
+td,
+th {
+  border: 1px solid grey;
+  padding: 4px 10px;
+}
+
+.wrapper {
+  padding-top: 100px;
+  width: fit-content;
+  margin: auto;
+}
